--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./pages/index.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <a href="#"><img class="header__logo" src="./images/LOGO.svg" alt="Логотип Mesto Russia" /></a>
+      <a href="#"><img class="header__logo" src="./images/LOGO.svg" alt="Логотип Mesto Russia"></a>
     </header>
 
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/AVA.png" alt="Аватар профиля" />
+        <img class="profile__avatar" src="./images/AVA.png" alt="Аватар профиля">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
@@ -26,60 +26,60 @@
       </section>
 
       <section class="elements">
-        <ul class="elements__list">
-          <article class="element">
-            <img class="element__image" src="./images/Karach.jpg" alt="232323" />
+        <div class="elements__list">
+          <figure class="element">
+            <img class="element__image" src="./images/Karach.jpg" alt="Карачаевск">
             <figcaption class="element__info">
               <h2 class="element__name">Карачаевск</h2>
 
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
-          </article>
+          </figure>
 
-          <article class="element">
-            <img class="element__image" src="./images/Elbrus1.jpg" alt="232323" />
+          <figure class="element">
+            <img class="element__image" src="./images/Elbrus1.jpg" alt="Гора Эльбрус">
             <figcaption class="element__info">
               <h2 class="element__name">Гора Эльбрус</h2>
 
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
-          </article>
+          </figure>
 
-          <article class="element">
-            <img class="element__image" src="./images/Domb.jpg" alt="232323" />
+          <figure class="element">
+            <img class="element__image" src="./images/Domb.jpg" alt="Домбай">
             <figcaption class="element__info">
               <h2 class="element__name">Домбай</h2>
 
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
-          </article>
+          </figure>
 
-          <article class="element">
-            <img class="element__image" src="./images/Elbrus1.jpg" alt="232323" />
+          <figure class="element">
+            <img class="element__image" src="./images/Elbrus1.jpg" alt="Гора Эльбрус">
             <figcaption class="element__info">
               <h2 class="element__name">Гора Эльбрус</h2>
 
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
-          </article>
+          </figure>
 
-          <article class="element">
-            <img class="element__image" src="./images/Domb.jpg" . alt="232323" />
+          <figure class="element">
+            <img class="element__image" src="./images/Domb.jpg" alt="Домбай">
             <figcaption class="element__info">
               <h2 class="element__name">Домбай</h2>
 
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
-          </article>
+          </figure>
 
-          <article class="element">
-            <img class="element__image" src="./images/Karach.jpg" alt="232323" />
+          <figure class="element">
+            <img class="element__image" src="./images/Karach.jpg" alt="Карачаево-Черкесия">
             <figcaption class="element__info">
               <h2 class="element__name">Карачаево-Черкесия</h2>
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
-          </article>
-        </ul>
+          </figure>
+        </div>
       </section>
     </main>
 
@@ -93,11 +93,10 @@
       <form class="popup__form">
         <h2 class="popup__title">Редактировать профиль</h2>
         <fieldset class="popup__fieldset">
-          <input class="popup__input" type="text" id="nameInput" placeholder="Имя" />
-          <input class="popup__input" type="text" id="jobInput" placeholder="Профессия" />
+          <input class="popup__input" type="text" id="nameInput" placeholder="Имя">
+          <input class="popup__input" type="text" id="jobInput" placeholder="Профессия">
         </fieldset>
-        <button class="popup__save-button" type="submit" title="Сохранить">
-          Сохранить
+        <button class="popup__save-button" type="submit" title="Сохранить">Сохранить
         </button>
       </form>
       <button class="popup__close-button" type="button" title="Закрыть"></button>
