--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <main class="content">
       <section class="profile">
+        <div class="profile__avatar-edit">
         <img class="profile__avatar" src="./images/AVA.png" alt="Аватар профиля">
+      </div>
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
@@ -31,7 +33,6 @@
             <img class="element__image" src="./images/Karach.jpg" alt="Карачаевск">
             <figcaption class="element__info">
               <h2 class="element__name">Карачаевск</h2>
-
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
           </figure>
@@ -40,7 +41,6 @@
             <img class="element__image" src="./images/Elbrus1.jpg" alt="Гора Эльбрус">
             <figcaption class="element__info">
               <h2 class="element__name">Гора Эльбрус</h2>
-
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
           </figure>
@@ -49,7 +49,6 @@
             <img class="element__image" src="./images/Domb.jpg" alt="Домбай">
             <figcaption class="element__info">
               <h2 class="element__name">Домбай</h2>
-
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
           </figure>
@@ -58,7 +57,6 @@
             <img class="element__image" src="./images/Elbrus1.jpg" alt="Гора Эльбрус">
             <figcaption class="element__info">
               <h2 class="element__name">Гора Эльбрус</h2>
-
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
           </figure>
@@ -67,7 +65,6 @@
             <img class="element__image" src="./images/Domb.jpg" alt="Домбай">
             <figcaption class="element__info">
               <h2 class="element__name">Домбай</h2>
-
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
           </figure>
@@ -79,6 +76,7 @@
               <button class="element__like-button" type="button" title="Нравится"></button>
             </figcaption>
           </figure>
+
         </div>
       </section>
     </main>
@@ -90,11 +88,11 @@
 
   <div class="popup popup_form_edit">
     <div class="popup__container">
-      <form class="popup__form">
+      <form class="popup__form" name="profile-form">
         <h2 class="popup__title">Редактировать профиль</h2>
         <fieldset class="popup__fieldset">
-          <input class="popup__input" type="text" id="nameInput" placeholder="Имя">
-          <input class="popup__input" type="text" id="jobInput" placeholder="Профессия">
+          <input class="popup__input" name="name" type="text" id="nameInput" placeholder="Имя">
+          <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия">
         </fieldset>
         <button class="popup__save-button" type="submit" title="Сохранить">Сохранить
         </button>
