--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
     <div class="popup__container">
       <form class="popup__form popup__form_profile" name="profile-form" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
-          <input class="popup__input" name="name" type="text" id="nameInput" placeholder="Имя">
-          <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия">
+        <fieldset class="popup__fieldset">
+          <input class="popup__input" name="name" type="text" id="nameInput" placeholder="Имя" minlength="2" maxlength="200" required>
+          <span class="popup__input-error" id="nameInput-error"></span>
+          
+          <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия" minlength="2" maxlength="200" required>
+          <span class="popup__input-error" id="jobInput-error"></span>
+</fieldset>
         <button class="popup__save-button" type="submit" title="Сохранить">
           Сохранить
         </button>
@@ -56,14 +61,26 @@
     <div class="popup__container">
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Новое место</h2>
+
+        <fieldset class="popup__fieldset">
           <input class="popup__input" id="typePlace" type="text" name="typePlace" autofocus value=""
             placeholder="Название" minlength="2" maxlength="30" required>
+
+            <span class="popup__input-error" id="typePlace-error"></span>
+
           <input class="popup__input" id="typeUrl" type="url" name="typeUrl" value="" placeholder="Ссылка на картинку"
             required>
+
+            <span class="popup__input-error" id="typeUrl-error"></span>
+          </fieldset>
+
         <button class="popup__save-button" type="submit" title="Создать">
           Создать
         </button>
+
       </form>
+
+
       <button class="popup__close-button" type="button" title="Закрыть"></button>
     </div>
   </div>
@@ -86,7 +103,8 @@
       </figcaption>
     </figure>
   </template>
-
+  
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
