--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <a href="#"><img class="header__logo" src="./images/LOGO.svg" alt="Логотип Mesto Russia"></a>
+      <a href="#"><img class="header__logo" src="./images/LOGO.svg" alt="Логотип Mesto Russia" /></a>
     </header>
 
     <main class="content">
@@ -35,7 +35,6 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
-
   </div>
 
   <div class="popup popup_form_edit">
@@ -43,12 +42,13 @@
       <form class="popup__form popup__form_profile" name="profile-form" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
         <fieldset class="popup__fieldset">
-          <input class="popup__input" name="name" type="text" id="nameInput" placeholder="Имя" minlength="2" maxlength="200" required>
+          <input class="popup__input" name="name" autofocus value="Жак-Ив Кусто" type="text" id="nameInput"
+            placeholder="Имя" minlength="2" maxlength="200" required>
           <span class="popup__input-error" id="nameInput-error"></span>
-          
-          <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия" minlength="2" maxlength="200" required>
+          <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия" minlength="2"
+            maxlength="200" value="Исследователь океана" required>
           <span class="popup__input-error" id="jobInput-error"></span>
-</fieldset>
+        </fieldset>
         <button class="popup__save-button" type="submit" title="Сохранить">
           Сохранить
         </button>
@@ -61,26 +61,18 @@
     <div class="popup__container">
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Новое место</h2>
-
         <fieldset class="popup__fieldset">
           <input class="popup__input" id="typePlace" type="text" name="typePlace" autofocus value=""
             placeholder="Название" minlength="2" maxlength="30" required>
-
-            <span class="popup__input-error" id="typePlace-error"></span>
-
+          <span class="popup__input-error" id="typePlace-error"></span>
           <input class="popup__input" id="typeUrl" type="url" name="typeUrl" value="" placeholder="Ссылка на картинку"
             required>
-
-            <span class="popup__input-error" id="typeUrl-error"></span>
-          </fieldset>
-
+          <span class="popup__input-error" id="typeUrl-error"></span>
+        </fieldset>
         <button class="popup__save-button" type="submit" title="Создать">
           Создать
         </button>
-
       </form>
-
-
       <button class="popup__close-button" type="button" title="Закрыть"></button>
     </div>
   </div>
@@ -103,7 +95,7 @@
       </figcaption>
     </figure>
   </template>
-  
+
   <script src="./scripts/validate.js"></script>
   <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
