--- a/index.html
+++ b/index.html
@@ -37,22 +37,20 @@
     </footer>
   </div>
 
-  <div class="popup popup_form_edit">
+  <div class="popup popup_form_edit ">
     <div class="popup__container">
       <form class="popup__form popup__form_profile" name="profile-form" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <fieldset class="popup__fieldset">
           <div class="popup__input-container">
-          <input class="popup__input" name="name" autofocus value="Жак-Ив Кусто" type="text" id="nameInput"
+          <input class="popup__input" name="name" autofocus type="text" id="nameInput" 
             placeholder="Имя" minlength="2" maxlength="40" required>
           <span class="popup__input-error" id="nameInput-error"></span>
         </div>
         <div class="popup__input-container">
           <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия" minlength="2"
-            maxlength="200" value="Исследователь океана" required>
+            maxlength="200" required>
           <span class="popup__input-error" id="jobInput-error"></span>
-        </div>
-        </fieldset>
+        </div> 
         <button class="popup__save-button" type="submit" title="Сохранить">
           Сохранить
         </button>
@@ -65,7 +63,6 @@
     <div class="popup__container">
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Новое место</h2>
-        <fieldset class="popup__fieldset">
           <div class="popup__input-container">
           <input class="popup__input" id="typePlace" type="text" name="typePlace" autofocus value=""
             placeholder="Название" minlength="2" maxlength="30" required>
@@ -76,7 +73,6 @@
             required>
           <span class="popup__input-error" id="typeUrl-error"></span>
         </div>
-        </fieldset>
         <button class="popup__save-button" type="submit" title="Создать">
           Создать
         </button>
