--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
@@ -17,12 +18,12 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar-edit">
-          <img class="profile__avatar" src="./images/AVA.png" alt="Аватар профиля">
+          <img class="profile__avatar" src="./images/1011.jpg" alt="Аватар профиля">
         </div>
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name">Райан Гослинг</h1>
           <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
-          <p class="profile__job">Исследователь океана</p>
+          <p class="profile__job">Серый человек</p>
         </div>
         <button class="profile__add-button" type="button" title="Добавить новую фотографию"></button>
       </section>
@@ -41,16 +42,16 @@
     <div class="popup__container">
       <form class="popup__form popup__form_profile" name="profile-form" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
-          <div class="popup__input-container">
-          <input class="popup__input" name="name" autofocus type="text" id="nameInput" 
-            placeholder="Имя" minlength="2" maxlength="40" required>
+        <div class="popup__input-container">
+          <input class="popup__input" name="name" autofocus type="text" id="nameInput" placeholder="Имя" minlength="2"
+            maxlength="40" required>
           <span class="popup__input-error" id="nameInput-error"></span>
         </div>
         <div class="popup__input-container">
           <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия" minlength="2"
             maxlength="200" required>
           <span class="popup__input-error" id="jobInput-error"></span>
-        </div> 
+        </div>
         <button class="popup__save-button" type="submit" title="Сохранить">
           Сохранить
         </button>
@@ -63,12 +64,12 @@
     <div class="popup__container">
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Новое место</h2>
-          <div class="popup__input-container">
+        <div class="popup__input-container">
           <input class="popup__input" id="typePlace" type="text" name="typePlace" autofocus value=""
             placeholder="Название" minlength="2" maxlength="30" required>
           <span class="popup__input-error" id="typePlace-error"></span>
-          </div>
-          <div class="popup__input-container">
+        </div>
+        <div class="popup__input-container">
           <input class="popup__input" id="typeUrl" type="url" name="typeUrl" value="" placeholder="Ссылка на картинку"
             required>
           <span class="popup__input-error" id="typeUrl-error"></span>
@@ -83,7 +84,7 @@
 
   <div class="popup popup_viewer">
     <div class="popup__content">
-      <img class="popup__image" src="#" alt="">
+      <img class="popup__image" src=" #" alt="">
       <h2 class="popup__text"></h2>
       <button class="popup__close-button" type="button" title="Закрыть"></button>
     </div>
@@ -91,7 +92,7 @@
 
   <template class="template-card">
     <figure class="element">
-      <img class="element__image" src="#" alt="">
+      <img class="element__image" src="#" alt="Картинка">
       <figcaption class="element__info">
         <h2 class="element__name"></h2>
         <button class="element__trash-button" type="button" title="Удалить"></button>
@@ -99,10 +100,9 @@
       </figcaption>
     </figure>
   </template>
-
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/index.js"></script>
+  
+  <script defer type="module" src="./scripts/index.js"></script>
 </body>
+
 
 </html>
