--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
+
   <title>Mesto</title>
 </head>
 
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <a href="#"><img class="header__logo" src="./images/LOGO.svg" alt="Логотип Mesto Russia" /></a>
+      <a href="#"><img class="header__logo" src="<%=require('./images/LOGO.svg')%>" alt="Логотип Mesto Russia" /></a>
     </header>
 
     <main class="content">
       <section class="profile">
         <div class="profile__avatar-edit">
-          <img class="profile__avatar" src="./images/1011.jpg" alt="Аватар профиля">
+          <img class="profile__avatar" src="<%=require('./images/1011.jpg')%>" alt="Аватар профиля">
         </div>
         <div class="profile__info">
           <h1 class="profile__name">Райан Гослинг</h1>
@@ -65,14 +65,14 @@
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__input-container">
-          <input class="popup__input" id="typePlace" type="text" name="typePlace" autofocus value=""
+          <input class="popup__input" id="name" type="text" name="name" autofocus value=""
             placeholder="Название" minlength="2" maxlength="30" required>
-          <span class="popup__input-error" id="typePlace-error"></span>
+          <span class="popup__input-error" id="name-error"></span>
         </div>
         <div class="popup__input-container">
-          <input class="popup__input" id="typeUrl" type="url" name="typeUrl" value="" placeholder="Ссылка на картинку"
+          <input class="popup__input" id="link" type="url" name="link" value="" placeholder="Ссылка на картинку"
             required>
-          <span class="popup__input-error" id="typeUrl-error"></span>
+          <span class="popup__input-error" id="link-error"></span>
         </div>
         <button class="popup__save-button" type="submit" title="Создать">
           Создать
@@ -101,7 +101,7 @@
     </figure>
   </template>
   
-  <script defer type="module" src="./scripts/index.js"></script>
+  
 </body>
 
 
