--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css"> 
   <title>Mesto</title>
 </head>
 
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <a href="#"><img class="header__logo" src="<%=require('./images/LOGO.svg')%>" alt="Логотип Mesto Russia" /></a>
+      <a href="#"><img class="header__logo" src="./images/LOGO.svg" alt="Логотип Mesto Russia" /></a>
     </header>
 
     <main class="content">
       <section class="profile">
-        <div class="profile__avatar-edit">
-          <img class="profile__avatar" src="<%=require('./images/1011.jpg')%>" alt="Аватар профиля">
-        </div>
+        
+
+
+          <button class="profile__avatar-edit" type="button" title="Обновить аватар">
+             <img class="profile__avatar" src="./images/1011.jpg" alt="Аватар профиля">
+            </button>
+
+
+
+
         <div class="profile__info">
           <h1 class="profile__name">Райан Гослинг</h1>
           <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
@@ -35,6 +43,24 @@
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
   </div>
+
+  <div class="popup popup_form_avatar">
+    <div class="popup__container">
+      <form class="popup__form" name="profile-form" novalidate>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <input class="popup__input" id="avatar" type="url" name="avatar" value="" placeholder="Ссылка на аватар" required>
+        <span class="popup__input-error" id="avatar-error"></span>
+        <button class="popup__save-button" type="submit" title="Сохранить">Сохранить</button>
+      </form>
+      <button class="popup__close-button" type="button" title="Закрыть"></button>
+    </div>
+  </div>
+
+
+
+
+
+
 
   <div class="popup popup_form_edit ">
     <div class="popup__container">
@@ -80,6 +106,27 @@
     </div>
   </div>
 
+
+
+
+
+
+
+<div class="popup popup_form_confirm">
+  <div class="popup__container">
+    <form class="popup__form" name="profileData" novalidate>
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button class="popup__save-button popup__button-confirm" type="submit" title="Подтвердить">Да</button>
+    </form>
+    <button class="popup__close-button" type="button" title="Закрыть"></button>
+  </div>
+</div>
+
+
+
+
+
+
   <div class="popup popup_viewer">
     <div class="popup__content">
       <img class="popup__image" src="#" alt="">
@@ -94,12 +141,18 @@
       <figcaption class="element__info">
         <h2 class="element__name"></h2>
         <button class="element__trash-button" type="button" title="Удалить"></button>
+
+        <div class="element__like-container">
         <button class="element__like-button" type="button" title="Нравится"></button>
+        <p class="element__like-count">0</p>
+        </div>
+        
       </figcaption>
     </figure>
   </template>
   
-  
+  <script defer type="module" src="./pages/index.js"></script> 
+
 </body>
 
 
