--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css"> 
+  <!-- <link rel="stylesheet" href="./pages/index.css"> -->
   <title>Mesto</title>
 </head>
 
@@ -151,7 +151,7 @@
     </figure>
   </template>
   
-  <script defer type="module" src="./pages/index.js"></script> 
+  <!-- <script defer type="module" src="./pages/index.js"></script> -->
 
 </body>
 
