--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <a href="#"><img class="header__logo" src="./images/LOGO.svg" alt="Логотип Mesto Russia" /></a>
+      <a href="#"><img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип Mesto Russia" /></a>
     </header>
 
     <main class="content">
