--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
 
           <button class="profile__avatar-edit" type="button" title="Обновить аватар">
-             <img class="profile__avatar" src="./images/1011.jpg" alt="Аватар профиля">
+             <img class="profile__avatar" src="<%=require('./images/1011.jpg')%>" alt="Аватар профиля">
             </button>
 
 
