--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
           <span class="popup__input-error" id="nameInput-error"></span>
         </div>
         <div class="popup__input-container">
-          <input class="popup__input" name="job" type="text" id="jobInput" placeholder="Профессия" minlength="2"
+          <input class="popup__input" name="about" type="text" id="jobInput" placeholder="Профессия" minlength="2"
             maxlength="200" required>
           <span class="popup__input-error" id="jobInput-error"></span>
         </div>
