--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,10 @@
     <div class="popup__container">
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Обновить аватар</h2>
-        <input class="popup__input" id="avatar" type="url" name="avatar" value="" placeholder="Ссылка на аватар" required>
-        <span class="popup__input-error" id="avatar-error"></span>
+        <div class="popup__input-container">
+          <input class="popup__input" id="avatar" type="url" name="avatar" value="" placeholder="Ссылка на аватар" required>
+          <span class="popup__input-error" id="avatar-error"></span>
+          </div>
         <button class="popup__save-button" type="submit" title="Сохранить">Сохранить</button>
       </form>
       <button class="popup__close-button" type="button" title="Закрыть"></button>
