--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,16 @@
 
 
           <button class="profile__avatar-edit" type="button" title="Обновить аватар">
-             <img class="profile__avatar" src="<%=require('./images/1011.jpg')%>" alt="Аватар профиля">
+             <img class="profile__avatar" src="" alt="Аватар профиля">
             </button>
 
 
 
 
         <div class="profile__info">
-          <h1 class="profile__name">Райан Гослинг</h1>
+          <h1 class="profile__name"></h1>
           <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
-          <p class="profile__job">Серый человек</p>
+          <p class="profile__job"></p>
         </div>
         <button class="profile__add-button" type="button" title="Добавить новую фотографию"></button>
       </section>
