--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" href="./pages/index.css"> -->
   <title>Mesto</title>
 </head>
@@ -16,16 +16,9 @@
 
     <main class="content">
       <section class="profile">
-        
-
-
-          <button class="profile__avatar-edit" type="button" title="Обновить аватар">
-             <img class="profile__avatar" src="" alt="Аватар профиля">
-            </button>
-
-
-
-
+        <button class="profile__avatar-edit" type="button" title="Обновить аватар">
+          <img class="profile__avatar" src="" alt="Аватар профиля" />
+        </button>
         <div class="profile__info">
           <h1 class="profile__name"></h1>
           <button class="profile__edit-button" type="button" title="Редактировать профиль"></button>
@@ -49,33 +42,30 @@
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Обновить аватар</h2>
         <div class="popup__input-container">
-          <input class="popup__input" id="avatar" type="url" name="avatar" value="" placeholder="Ссылка на аватар" required>
+          <input class="popup__input" id="avatar" type="url" name="avatar" value="" placeholder="Ссылка на аватар"
+            required />
           <span class="popup__input-error" id="avatar-error"></span>
-          </div>
-        <button class="popup__save-button" type="submit" title="Сохранить">Сохранить</button>
+        </div>
+        <button class="popup__save-button" type="submit" title="Сохранить">
+          Сохранить
+        </button>
       </form>
       <button class="popup__close-button" type="button" title="Закрыть"></button>
     </div>
   </div>
 
-
-
-
-
-
-
-  <div class="popup popup_form_edit ">
+  <div class="popup popup_form_edit">
     <div class="popup__container">
       <form class="popup__form popup__form_profile" name="profile-form" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
         <div class="popup__input-container">
           <input class="popup__input" name="name" autofocus type="text" id="nameInput" placeholder="Имя" minlength="2"
-            maxlength="40" required>
+            maxlength="40" required />
           <span class="popup__input-error" id="nameInput-error"></span>
         </div>
         <div class="popup__input-container">
           <input class="popup__input" name="about" type="text" id="jobInput" placeholder="Профессия" minlength="2"
-            maxlength="200" required>
+            maxlength="200" required />
           <span class="popup__input-error" id="jobInput-error"></span>
         </div>
         <button class="popup__save-button" type="submit" title="Сохранить">
@@ -91,13 +81,13 @@
       <form class="popup__form" name="profile-form" novalidate>
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__input-container">
-          <input class="popup__input" id="name" type="text" name="name" autofocus value=""
-            placeholder="Название" minlength="2" maxlength="30" required>
+          <input class="popup__input" id="name" type="text" name="name" autofocus value="" placeholder="Название"
+            minlength="2" maxlength="30" required />
           <span class="popup__input-error" id="name-error"></span>
         </div>
         <div class="popup__input-container">
           <input class="popup__input" id="link" type="url" name="link" value="" placeholder="Ссылка на картинку"
-            required>
+            required />
           <span class="popup__input-error" id="link-error"></span>
         </div>
         <button class="popup__save-button" type="submit" title="Создать">
@@ -108,30 +98,21 @@
     </div>
   </div>
 
-
-
-
-
-
-
-<div class="popup popup_form_confirm">
-  <div class="popup__container">
-    <form class="popup__form" name="profileData" novalidate>
-      <h2 class="popup__title">Вы уверены?</h2>
-      <button class="popup__save-button popup__button-confirm" type="submit" title="Подтвердить">Да</button>
-    </form>
-    <button class="popup__close-button" type="button" title="Закрыть"></button>
+  <div class="popup popup_form_confirm">
+    <div class="popup__container">
+      <form class="popup__form" name="profileData" novalidate>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <button class="popup__save-button popup__button-confirm" type="submit" title="Подтвердить">
+          Да
+        </button>
+      </form>
+      <button class="popup__close-button" type="button" title="Закрыть"></button>
+    </div>
   </div>
-</div>
-
-
-
-
-
 
   <div class="popup popup_viewer">
     <div class="popup__content">
-      <img class="popup__image" src="#" alt="">
+      <img class="popup__image" src="#" alt="" />
       <h2 class="popup__text"></h2>
       <button class="popup__close-button" type="button" title="Закрыть"></button>
     </div>
@@ -139,23 +120,20 @@
 
   <template class="template-card">
     <figure class="element">
-      <img class="element__image" src="#" alt="Картинка">
+      <img class="element__image" src="#" alt="Картинка" />
       <figcaption class="element__info">
         <h2 class="element__name"></h2>
         <button class="element__trash-button" type="button" title="Удалить"></button>
 
         <div class="element__like-container">
-        <button class="element__like-button" type="button" title="Нравится"></button>
-        <p class="element__like-count">0</p>
+          <button class="element__like-button" type="button" title="Нравится"></button>
+          <p class="element__like-count">0</p>
         </div>
-        
       </figcaption>
     </figure>
   </template>
-  
+
   <!-- <script defer type="module" src="./pages/index.js"></script> -->
-
 </body>
-
 
 </html>
