--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
 
         <div class="element__like-container">
           <button class="element__like-button" type="button" title="Нравится"></button>
-          <p class="element__like-count">0</p>
+          <p class="element__like-count"></p>
         </div>
       </figcaption>
     </figure>
