--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
       <a href="#"><img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип Mesto Russia" /></a>
     </header>
 
-    <main class="content">
+    <main class="content">./images/1011.jpg
       <section class="profile">
         <button class="profile__avatar-edit" type="button" title="Обновить аватар">
-          <img class="profile__avatar" src="" alt="Аватар профиля" />
+          <img class="profile__avatar" src="<%=require('./images/1011.jpg" alt="Аватар профиля" />
         </button>
         <div class="profile__info">
           <h1 class="profile__name"></h1>
