--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <a href="#"><img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип Mesto Russia" /></a>
     </header>
 
-    <main class="content">./images/1011.jpg
+    <main class="content">
       <section class="profile">
         <button class="profile__avatar-edit" type="button" title="Обновить аватар">
           <img class="profile__avatar" src="<%=require('./images/1011.jpg" alt="Аватар профиля" />
