--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <main class="content">
       <section class="profile">
         <button class="profile__avatar-edit" type="button" title="Обновить аватар">
-          <img class="profile__avatar" src="<%=require('./images/1011.jpg')%>" alt="Аватар профиля" />
+          <img class="profile__avatar" src="#" alt="Аватар профиля" />
         </button>
         <div class="profile__info">
           <h1 class="profile__name"></h1>
