--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,16 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Страница, где можно общаться с помощью карточек">
+  <meta property="og:title" content="Хех, привет">
+  <meta property="og:url" content="https://ryan-gosling.com/">
+  <meta property="og:image" content="">
+  <meta property="twitter:card" content="summary_large_image">
   <!-- <link rel="stylesheet" href="./pages/index.css"> -->
-  <title>Mesto</title>
+  <link rel="icon" href="<%=require('./images/M-favicon.svg')%>" type="image/svg+xml">
+  <title>Mesto JS</title>
 </head>
 
 <body class="page">
