--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta property="twitter:card" content="summary_large_image">
   <!-- <link rel="stylesheet" href="./pages/index.css"> -->
   <link rel="icon" href="<%=require('./images/M-favicon.svg')%>" type="image/svg+xml">
-  <title>Mesto JS</title>
+  <title>Mesto classes</title>
 </head>
 
 <body class="page">
